2006-02-21  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	
	Switched to using an expander after UI review.
	
2006-02-20  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-gecko-1.8.js:

	Enable error pages explicitly since xulrunner is missing
	that pref too.

2006-02-20  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:

	Do return on failure.

2006-02-16  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_state_event):

	Fix crash on switching to/from fullscreen mode. Bug #331462.

2006-02-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyBrowser.cpp:

	Guard against nsDocument::GetDefaultView returning NULL.
	Bug #327764.

2006-02-10  Peter Harvey  <peter.a.harvey@gmail.com>

	* data/ui/epiphany-toolbar.xml
	
	Add the zoom in/out items back.
	
2006-02-10  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks-editor.c
	
	Do not create the bookmarks bar when removing bookmarks
	from the toolbar.
	
	* lib/egg/egg-toolbars-model.c
	
	Fix infinite loop when a toolbar has no items on it.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>

        * configure.ac:

	Post-release version bump.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.7 ===
	
	* NEWS:
	* configure.ac:

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* m4/gecko.m4:
	
	Add a define and automake conditional for gecko
	debug builds.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* embed/mozilla/EphyPromptService.cpp:

	Use "Username" label for the password dialogue,
	for parity with gnome-password-dialog.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* data/default-prefs-common.js:

	Also use exthandler for snews and nntp.
	
	* data/default-prefs-toolkit.js:

	Add password manager prefs, since xulrunner is
	missing them.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	