@@ -1,5 +1,12 @@
 2006-02-21  Peter Harvey  <peter.a.harvey@gmail.com>
 
+	* src/bookmarks/ephy-bookmarks-menu.c
+	* src/bookmarks/ephy-nodes-cover.c
+	
+	Minor tweaks to improve menu generation.
+	
+2006-02-21  Peter Harvey  <peter.a.harvey@gmail.com>
+
 	* src/bookmarks/ephy-bookmark-properties.c
 	
 	Switched to using an expander after UI review.
